Bug 1666307 - Turn assertion failure into an early return for now. r=andi

Differential Revision: https://phabricator.services.mozilla.com/D90959